create pricing tile reusable component

--- a/src/app/pricing/princing-overview/princing-overview.component.html
+++ b/src/app/pricing/princing-overview/princing-overview.component.html
@@ -13,6 +13,11 @@
 
     <main class="grid relative">
 
+        <app-princing-tile class="col-12 lg:col-4" [pricingTileType]="pricingTypes.BASIC"></app-princing-tile>
+
+        <app-princing-tile class="col-12 lg:col-4" [pricingTileType]="pricingTypes.STANDARD"></app-princing-tile>
+
+        <app-princing-tile class="col-12 lg:col-4" [pricingTileType]="pricingTypes.PREMIUM"></app-princing-tile>
 
     </main>
 </div>
