create members screen, components and functionality

--- a/src/app/members/members-overview/members-overview.component.html
+++ b/src/app/members/members-overview/members-overview.component.html
@@ -1,1 +1,23 @@
+<div class="p-7">
+    <header>
+        <h1 class="font-bold text-4xl" [ngStyle]="{color:'#495057'}">Members & Roles</h1>
+        <h6 class="font-normal text-sm mb-6" [ngStyle]="{color:'#6C757D'}">You can easily manage your team on this page</h6>
+    </header>
+
+    <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
+
+    <main class="col-12 grid">
+        <aside class="col-3">
+            <app-invite-member></app-invite-member>
+        </aside>
+
+        <div class="col-9">
+            <app-members-datatable></app-members-datatable>
+        </div>
+    </main>
+
+    <hr class="my-3 mx-0 border-top-1 border-none surface-border" />
+
+</div>
+
 
