using async pipe

--- a/src/app/members/members-datatable/members-datatable.component.html
+++ b/src/app/members/members-datatable/members-datatable.component.html
@@ -1,4 +1,4 @@
-<p-table [value]="members" [tableStyle]="{ 'min-width': '50rem' }">
+<p-table [value]="(members | async) || []" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="header">
         <tr>
             <th>Name</th>
